Style (NONE) add missing components in last page and fix overall style and spacing

--- a/source/_patterns/01-molecules/10-checkout/03-checkout-step-footer.scss
+++ b/source/_patterns/01-molecules/10-checkout/03-checkout-step-footer.scss
@@ -1,5 +1,7 @@
 .step__footer {
   text-align : center;
+  margin : 3em 0 1em;
+
   @media only screen and (min-width: $breakpointTablet) {
     display : flex;
     flex-direction : row-reverse;
@@ -9,6 +11,8 @@
   &__continue-btn {
     display : block;
     margin : 0 auto 1em;
+    height : 3em;
+    padding : 1.35em;
     @media only screen and (min-width: $breakpointTablet) {
       display : inline-block;
       margin : 0 0 1em;
